# static_encrypt

./: Cargo.toml  README.md  build.rs
src/: lib.rs
tests/: test.rs
