[package]
name = "static_encrypt"
version = "0.1.0"
edition = "2024"
authors = ["5mukx <staffs@5mukx.site>"]
description = "Compile-time / static string encryption for Rust"
readme = "README.md"
homepage = "https://github.com/Whitecat18/static_encrypt"         
repository = "https://github.com/Whitecat18/static_encrypt"         
license = "Apache-2.0"                                  
keywords = ["encryption", "obfuscation", "string", "static", "compile-time"]
categories = ["cryptography", "no-std", "encoding"]
exclude = [".github", "tests/data/*", "target/*", "Cargo.lock"]

[[test]]
name = "test"
path = "tests/test.rs"          

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.5.0"
proc-macro2 = "1.0.105"
quote = "1.0.43"
rand = "0.9.2"

[dev-dependencies]
trybuild = "1.0"

[build-dependencies]
rand = "0.9"
[features]
default = ["xor"]
xor = []
rc4 = []
xorshift = []
vigenere = []  
lcg = []       
xorr = []
